# simple-calculator

./: CMakeLists.txt  README.md  app.rc
assets/: icon.ase
include/: Application.h  Button.h  Calculator.h  ClickHandler.h  Colors.h  InputField.h  Object.h  Resources.h
src/: Application.cpp  Button.cpp  Calculator.cpp  Colors.cpp  InputField.cpp  Object.cpp  Resources.cpp  main.cpp
